# AoC22

./: .gitignore  README.md  bazel-AoC22  bazel-bin  bazel-out  bazel-testlogs
Code/Test/: BUILD.bazel
src/Day1/: BUILD.bazel  D1P1.c  D1P2.c
src/Day10/: .bazelrc  BUILD.bazel  D10P1.c  D10P2.c
src/Day2/: BUILD.bazel  D2P1.c  D2P2.c
src/Day3/: BUILD.bazel  D3P1.c  D3P2.c
src/Day4/: BUILD.bazel  D4P1.c  D4P2.c
src/Day5/: BUILD.bazel  D5P1.c  D5P2.c
src/Day6/: BUILD.bazel  D6P1.c  D6P2.c
src/Day7/: BUILD.bazel  D7P1.c
src/Day8/: BUILD.bazel  D8P1.c  D8P2.c
src/Day9/: BUILD.bazel  D9P1.c
src/Test/: BUILD.bazel  test.c
test/: D10P1.h  D10P1UT.c  TestD10P1UT.c
