cc_binary(
    name = "D3P1",  # Name of the output binary
    srcs = ["D3P1.c"],  # Source file 
    visibility = ["//visibility:public"],
    copts = ["-std=c89"],  #  C90 
    toolchains = ["@bazel_tools//tools/cpp:toolchain"],  # GCC toolchain
)

cc_binary(
    name = "D3P2",  # Name of the output binary
    srcs = ["D3P2.c"],  # Source file 
    visibility = ["//visibility:public"],
    copts = ["-std=c89"],  # C90
    toolchains = ["@bazel_tools//tools/cpp:toolchain"],  # GCC toolchain
)