cc_binary(
    name = "D4P1",  # Name of the output binary
    srcs = ["D4P1.c"],  # Source file 
    visibility = ["//visibility:public"],
    copts = ["-std=c89"],  #  C89 
    toolchains = ["@bazel_tools//tools/cpp:toolchain"],  # GCC toolchain
    data = ["data.txt"],  # Include "data.txt" as data dependency
)

cc_binary(
    name = "D4P2",  # Name of the output binary
    srcs = ["D4P2.c"],  # Source file 
    visibility = ["//visibility:public"],
    copts = ["-std=c89"],  # C89
    toolchains = ["@bazel_tools//tools/cpp:toolchain"],  # GCC toolchain
    data = ["data.txt"],  # Include "data.txt" as data dependency
)